--- a/02-FileSearchRecursion.ipynb
+++ b/02-FileSearchRecursion.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02-FileSearchRecursion.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOaJt7da6EmxfLaDsvpfHrE",
+      "authorship_tag": "ABX9TyMtGwAZC64o+u9Hxlmd++ms",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,13 +57,27 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "jjBaeGufrbn7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CU1EW6qPqpsH",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "# File path for testing\n",
-        "file_path = '/content/drive/My Drive/testdir'"
+        "file_path = '/content/drive/My Drive/testdir'\n",
+        "suffix_search = '.c'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -92,10 +106,73 @@
         "    Returns:\n",
         "       a list of paths\n",
         "    \"\"\"\n",
-        "    return None"
+        "    file_list = []\n",
+        "    if(os.path.isdir(path)):\n",
+        "      _find_files(suffix, path, file_list)\n",
+        "\n",
+        "    return file_list"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3rbbk7HOsqz6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def _find_files(suffix, path, file_list):\n",
+        "  # Get the directory content\n",
+        "  folder_contents = os.listdir(path)\n",
+        "\n",
+        "  for f in folder_contents:\n",
+        "    full_path = os.path.join(path, f)\n",
+        "    \n",
+        "    # Check if its a folder\n",
+        "    if(os.path.isdir(full_path)):\n",
+        "      # Recursively call this function\n",
+        "      _find_files(suffix, full_path, file_list)\n",
+        "    elif f.endswith(suffix_search):\n",
+        "      # Its a file, check extension\n",
+        "      file_list.append(full_path)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZOpeZdc7txGY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "65fe80de-ae46-47ff-cd53-7c16227c5beb"
+      },
+      "source": [
+        "find_files(suffix_search, file_path)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['/content/drive/My Drive/testdir/subdir3/subsubdir1/b.c',\n",
+              " '/content/drive/My Drive/testdir/subdir1/a.c',\n",
+              " '/content/drive/My Drive/testdir/subdir5/a.c',\n",
+              " '/content/drive/My Drive/testdir/t1.c']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
     }
   ]
 }
