--- a/03-HuffmanCoding.ipynb
+++ b/03-HuffmanCoding.ipynb
@@ -31,7 +31,8 @@
         "colab": {}
       },
       "source": [
-        "import heapq"
+        "import heapq\n",
+        "import collections"
       ],
       "execution_count": 0,
       "outputs": []
@@ -125,6 +126,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "s-1nKUuSqPMh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "str1 = 'aaaabbbccc'\n",
+        "rr = collections.Counter(str1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NNEL23KZqYk5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "daefa6aa-f4b4-4697-8e7d-4390491b1ca6"
+      },
+      "source": [
+        "rr"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({'a': 4, 'b': 3, 'c': 3})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "LF1gTv1_nZmH",
         "colab_type": "code",
         "colab": {}
@@ -154,13 +199,62 @@
         "  def __init__(self):\n",
         "    self.heap = []\n",
         "\n",
-        "  def huffman_encoding(data):\n",
+        "  def huffman_encoding(self, data):\n",
         "    # Find the frequency of the characters\n",
+        "    freq = collections.Counter(data)\n",
+        "\n",
         "    # Create a heap queue\n",
+        "    for key in freq:\n",
+        "      node = HeapNode(key, freq[key])\n",
+        "      heapq.heappush(self.heap, node)\n",
+        "\n",
         "    # Merge the nodes\n",
         "    # Assign the codes\n",
-        "    # Encode the text\n",
-        "    pass"
+        "    # Encode the text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BAgC_oU9rSVF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "outputId": "7732ad78-d83e-4e13-84bd-0ab3c50dd6e1"
+      },
+      "source": [
+        "hc = HuffmanCoding()\n",
+        "aa = hc.huffman_encoding('aaabbccccdd')"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-95a70466c2bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mhc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHuffmanCoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0maa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhuffman_encoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'aaabbccccdd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-25-e16f6d951b69>\u001b[0m in \u001b[0;36mhuffman_encoding\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfreq\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m       \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHeapNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfreq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m       \u001b[0mheapq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheappush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Merge the nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'HeapNode' and 'HeapNode'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SU_1QkA7rcvc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
