--- a/03-HuffmanCoding.ipynb
+++ b/03-HuffmanCoding.ipynb
@@ -68,16 +68,16 @@
       "metadata": {
         "id": "QP2rvJwynK_J",
         "colab_type": "code",
+        "outputId": "cc811bc7-358a-40e9-feba-1dda4ed02891",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cc811bc7-358a-40e9-feba-1dda4ed02891"
+        }
       },
       "source": [
         "list_1"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,16 +98,16 @@
       "metadata": {
         "id": "Joxi7KcEnMVn",
         "colab_type": "code",
+        "outputId": "4766e2c6-bcdd-4e4f-f80b-be1ea9e1aeaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4766e2c6-bcdd-4e4f-f80b-be1ea9e1aeaa"
+        }
       },
       "source": [
         "heapq.heappop(list_1)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,16 +142,16 @@
       "metadata": {
         "id": "NNEL23KZqYk5",
         "colab_type": "code",
+        "outputId": "daefa6aa-f4b4-4697-8e7d-4390491b1ca6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "daefa6aa-f4b4-4697-8e7d-4390491b1ca6"
+        }
       },
       "source": [
         "rr"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,19 @@
         "    self.char = char\n",
         "    self.frequency = frequency\n",
         "    self.left_node = None\n",
-        "    self.right_node = None"
+        "    self.right_node = None\n",
+        "\n",
+        "  def __lt__(self, node):\n",
+        "    return self.frequency < node.frequency\n",
+        "\n",
+        "  def __eq__(self, node):\n",
+        "    if node is None:\n",
+        "      return False\n",
+        "    \n",
+        "    if not isinstance(node, HeapNode):\n",
+        "      return False\n",
+        "\n",
+        "    return self.frequency == node.frequency"
       ],
       "execution_count": 0,
       "outputs": []
@@ -203,12 +215,20 @@
         "    # Find the frequency of the characters\n",
         "    freq = collections.Counter(data)\n",
         "\n",
-        "    # Create a heap queue\n",
+        "    # Create a heap queue using heapq\n",
         "    for key in freq:\n",
         "      node = HeapNode(key, freq[key])\n",
         "      heapq.heappush(self.heap, node)\n",
         "\n",
-        "    # Merge the nodes\n",
+        "    # Merge the nodes - at the end there will be 1 root node. Frequency should be the total number of chars.\n",
+        "    while(len(self.heap)>1):\n",
+        "      node1 = heapq.heappop(self.heap)\n",
+        "      node2 = heapq.heappop(self.heap)\n",
+        "      merged_node = HeapNode(None, node1.frequency + node2.frequency)\n",
+        "      merged_node.left_node = node1\n",
+        "      merged_node.right_node = node2\n",
+        "      heapq.heappush(self.heap, merged_node)\n",
+        "    \n",
         "    # Assign the codes\n",
         "    # Encode the text"
       ],
@@ -220,36 +240,210 @@
       "metadata": {
         "id": "BAgC_oU9rSVF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 304
-        },
-        "outputId": "7732ad78-d83e-4e13-84bd-0ab3c50dd6e1"
+        "colab": {}
       },
       "source": [
         "hc = HuffmanCoding()\n",
-        "aa = hc.huffman_encoding('aaabbccccdd')"
+        "aa = hc.huffman_encoding('aaabbcccc')"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SU_1QkA7rcvc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "root = hc.heap[0]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TiXsPOLb51gw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "72718353-2375-46bd-c13a-aa307deb8719"
+      },
+      "source": [
+        "root.frequency, root.char"
+      ],
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-95a70466c2bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mhc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHuffmanCoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0maa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhuffman_encoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'aaabbccccdd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-25-e16f6d951b69>\u001b[0m in \u001b[0;36mhuffman_encoding\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfreq\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m       \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHeapNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfreq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m       \u001b[0mheapq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheappush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Merge the nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'HeapNode' and 'HeapNode'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(9, None)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SU_1QkA7rcvc",
+        "id": "1Pmjl3dL59Ax",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "second_level_l = root.left_node"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IubgS0Gf9BcI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c15afa45-b0d4-45ce-90f8-a6eb7fbb2842"
+      },
+      "source": [
+        "second_level_l.char"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'c'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zAVuks39AmHI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1f02f115-e5d3-413b-a09b-90d5b914f31e"
+      },
+      "source": [
+        "second_level_r = root.right_node\n",
+        "second_level_r.frequency"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p_aPWSiYA17y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "third_level_l = second_level_r.left_node"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eu3RsB_SBCoM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e4627da2-eb88-4d55-8fee-7ec0b4f71be1"
+      },
+      "source": [
+        "third_level_l.char"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'b'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I39fdHk1BGWv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f823342d-b84e-4e16-a06f-75bb532a68db"
+      },
+      "source": [
+        "third_level_r = second_level_r.right_node\n",
+        "third_level_r.char"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "opdB0RRFBXkg",
         "colab_type": "code",
         "colab": {}
       },
