--- a/03-HuffmanCoding.ipynb
+++ b/03-HuffmanCoding.ipynb
@@ -210,6 +210,7 @@
         "class HuffmanCoding:\n",
         "  def __init__(self):\n",
         "    self.heap = []\n",
+        "    self.char_codes = {}\n",
         "\n",
         "  def huffman_encoding(self, data):\n",
         "    # Find the frequency of the characters\n",
@@ -230,7 +231,29 @@
         "      heapq.heappush(self.heap, merged_node)\n",
         "    \n",
         "    # Assign the codes\n",
-        "    # Encode the text"
+        "    # Get the root of the heap, set current code to empty string\n",
+        "    # Call the recursive function to iterate through the tree to set the code\n",
+        "    heap_root = heapq.heappop(self.heap)\n",
+        "    current_code = ''\n",
+        "    self.set_code(heap_root, current_code)\n",
+        "\n",
+        "    # Encode the text\n",
+        "\n",
+        "\n",
+        "    return self.heap\n",
+        "\n",
+        "  def set_code(self, node, current_code):\n",
+        "    if node is None:\n",
+        "      return\n",
+        "    \n",
+        "    if node.char is not None:\n",
+        "      # if this is a node with a character, assign the code\n",
+        "      self.char_codes[node.char] = current_code\n",
+        "      return\n",
+        "\n",
+        "    # Assign the left branch as 0 and right branch a 1\n",
+        "    self.set_code(node.left_node, current_code + '0')\n",
+        "    self.set_code(node.right_node, current_code + '1')\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -252,12 +275,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SU_1QkA7rcvc",
+        "id": "llRV8ssRFAMM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ffd954e4-1a0f-42ae-ea5c-873fa3dce152"
+      },
+      "source": [
+        "hc.char_codes"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': '11', 'b': '10', 'c': '0'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "so5CLtwHCFxL",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "root = hc.heap[0]"
+        "nn = heapq.heappop(aa)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -265,18 +318,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TiXsPOLb51gw",
+        "id": "JxwYonANCQaR",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "72718353-2375-46bd-c13a-aa307deb8719"
+        "outputId": "d7ebd14d-7d2b-443d-9b24-c2e71ea59b1d"
       },
       "source": [
-        "root.frequency, root.char"
+        "nn.frequency, nn.char"
       ],
-      "execution_count": 58,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,162 +341,74 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 76
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1Pmjl3dL59Ax",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "second_level_l = root.left_node"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IubgS0Gf9BcI",
+        "id": "SLoS_L6VCbKt",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c15afa45-b0d4-45ce-90f8-a6eb7fbb2842"
+        "outputId": "f469aab3-ad85-43db-96a6-07eb2811121a"
       },
       "source": [
-        "second_level_l.char"
+        "len(aa)"
       ],
-      "execution_count": 62,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'c'"
+              "1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 80
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zAVuks39AmHI",
+        "id": "E3bt0VewChll",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1f02f115-e5d3-413b-a09b-90d5b914f31e"
+        "outputId": "f537fd20-9076-4123-cd5b-d7d0259bbe8a"
       },
       "source": [
-        "second_level_r = root.right_node\n",
-        "second_level_r.frequency"
+        "aa"
       ],
-      "execution_count": 65,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5"
+              "[]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 78
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p_aPWSiYA17y",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "third_level_l = second_level_r.left_node"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eu3RsB_SBCoM",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e4627da2-eb88-4d55-8fee-7ec0b4f71be1"
-      },
-      "source": [
-        "third_level_l.char"
-      ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'b'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 68
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "I39fdHk1BGWv",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f823342d-b84e-4e16-a06f-75bb532a68db"
-      },
-      "source": [
-        "third_level_r = second_level_r.right_node\n",
-        "third_level_r.char"
-      ],
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'a'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 69
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "opdB0RRFBXkg",
+        "id": "4Aml4C5YClia",
         "colab_type": "code",
         "colab": {}
       },
